# etl-math-lib

./: .gitignore  CMakeLists.txt  README.md
include/MathLib/: MathLib.h  Version.h
include/MathLib/Common/: Common.h  Constants.h  ElementProxy.h  TypeComparisons.h
include/MathLib/Types/: Matrix3x3.h  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
include/MathLib/Types/inline/: Matrix3x3.inl  Matrix4x4.inl  Vector2.inl  Vector3.inl  Vector4.inl
private/MathLib/Common/: Asserts.h  Common.h  Constants.h  FixedPointHelpers.h  RawTag.h
private/MathLib/Types/: Matrix3x3.inl
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  ElementProxy.cpp  TypeComparisons.cpp
src/Sandbox/: Sandbox.cpp
src/Types/: CMakeLists.txt  Matrix3x3.cpp  Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/: CMakeLists.txt  test_Matrix3x3.cpp  test_Matrix4x4.cpp  test_Vector2.cpp  test_Vector3.cpp  test_Vector4.cpp
tools/: build.bat  build_mathlib.py  build_solution.py  generate.bat  generate_solution.py  run_tests.py  tests.bat
tools/scripts/: build_mathlib.py  generate_solution.py  run_tests.py
tools/scripts/utils/: color_print.py
